--- a/src/chung/requirements.txt
+++ b/src/chung/requirements.txt
@@ -1,4 +1,8 @@
-pytorch==1.9.0
-spacy==2.0.12
+torch==1.9.1
+torchvision==0.10.1
+torchaudio==0.9.1
 scipy==1.5.2
+spacy==3.1.3
 matplotlib==3.3.4
+torchsummaryX==1.3.0
+tqdm==4.62.3
