--- a/src/chung/requirements.txt
+++ b/src/chung/requirements.txt
@@ -2,6 +2,8 @@ torch==1.9.1
 torchvision==0.10.1
 torchaudio==0.9.1
 torchtext==0.10.1
+jupyterlab==3.1.13
+notebook==6.4.4
 scipy==1.5.2
 spacy==3.1.3
 nltk==3.6.3
